--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
 		<link rel="stylesheet" media="all" href="css/styles.css" type="text/css" />
 		<link rel="stylesheet" media="all" href="css/docs.css" type="text/css" />
-		<link rel="stylesheet" media="all" href="css/doc.css" type="text/css" />
-        
+		<link rel="stylesheet" media="all" href="css/doc.css" type="text/css" />        
         <link href="css/main.css" media="all" rel="stylesheet" type="text/css" />
     </head>
     <body style="width: 720px">
         <div id="searchResults" class="docturu container narrow">
-            <div id="top-header"><span>Запись на прием к врачу онлайн</span>
-                <a style="float: right;" href="//doctu.ru">
+            <div id="top-header">
+                <span>Запись к врачу</span>
+                <a class="logo-sm" href="//doctu.ru">
                     <img height="16" alt="doctu.ru" src="//doctu.ru/img/logo_doctu.png">
                 </a>
             </div>
